# PyThermoVariomag

./: .gitignore  README.md  pyproject.toml
src/pythermovariomag/: __init__.py  app.py  protocol.py
