[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pythermovariomag"
version = "0.1.0"
description = "Simple Python GUI for Thermo / Variomag Teleshake serial control"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "PyThermoVariomag contributors" }
]
dependencies = [
  "pyserial>=3.5"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering",
]

[project.scripts]
pythermovariomag = "pythermovariomag.app:main"

[tool.setuptools.packages.find]
where = ["src"]
